Nicholas: update legend in comparison to COMPAS

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -293,7 +293,7 @@ across 10 cross-validation folds.
 
 We ran a 10-fold cross validation experiment using CORELS
 and eight other algorithms:
-logistic regression, support vector machine (SVM), AdaBoost, CART, C4.5,
+logistic regression, support vector machines (SVM), AdaBoost, CART, C4.5,
 random forest (RF), RIPPER, and scalable Bayesian rule lists (SBRL).\footnote{For
 SBRL, we use the C implementation at \url{https://github.com/Hongyuy/sbrlmod}.
 By default, SBRL sets ${\eta = 3}$, ${\lambda = 9}$,
