Minor edit and typo found by Cynthia

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -250,7 +250,7 @@ a mean accuracy of~0.660, with standard deviation~0.019.
 
 Figure~\ref{fig:tpr-fpr} shows that CORELS and COMPAS perform similarly across both black and white individuals.
 %
-Both algorithms have much higher true positive rates (TPR's) and false positive rates (FPRs) for blacks than whites, and higher true negative rates (TNR's) and false negative rates (FNRs) for whites than blacks.
+Both algorithms have much higher true positive rates (TPR's) and false positive rates (FPRs) for blacks than whites (left), and higher true negative rates (TNR's) and false negative rates (FNRs) for whites than blacks (right).
 %
 The fact that COMPAS has higher FPR's for blacks and higher FNR's for whites was a central observation motivating ProPublica's claim that COMPAS is racially biased~\citep{LarsonMaKiAn16}.
 %
@@ -949,4 +949,4 @@ Our advances are meaningful only because we can run them on a modern system.
 Combining our algorithmic improvements with the increase in modern processor speeds,
 our algorithm runs more than $10^{13}$ times faster than a na\"ive implementation would have in 1984.
 %
-This helps explain why neither our algorithm, nor other branch-and-bound variants, had not been developed before now.
+This helps explain why neither our algorithm, nor other branch-and-bound variants, had been developed before now.
