--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -115,7 +115,7 @@ optimal rule lists found by CORELS, across 10 cross-validation folds,
 for different values of the regularization parameter~$\Reg$.
 %
 These rule lists correspond to the results for CORELS summarized
-in Figure~\ref{fig:sparsity}~(\S\ref{sec:sparsity}).
+in Figures~\ref{fig:sparsity-compas} and~\ref{fig:sparsity-weapon}~(\S\ref{sec:sparsity}).
 %
 Recall that as~$\Reg$ decreases, optimal rule lists tend to grow in length. \\
 
