Add ref for Machine Bias article by ProPublica

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -107,6 +107,13 @@ author={J. Larson and S. Mattu and L. Kirchner and J. Angwin},
 journal={ProPublica},
 year={2016}
 }
+@article{AngwinLaMaKi16,
+title={Machine Bias},
+__author={Julia Angwin and Jeff Larson and Surya Mattu and Lauren Kirchner},
+author={J. Angwin and J. Larson and S. Mattu and L. Kirchner},
+journal={ProPublica},
+year={2016}
+}
 
 @article{Goel16,
 __author = {Goel, Sharad and Rao, Justin M. and Shroff, Ravi},
