--- a/paper/sections/appendix-bounds.tex
+++ b/paper/sections/appendix-bounds.tex
@@ -1,4 +1,3 @@
-\newpage
 \section{Excessive antecedent support}
 \label{appendix:ub-supp}
 
@@ -428,6 +427,7 @@ and~\eqref{eq:equiv-analogous-optimal} to obtain the desired inequality in~\eqre
 = \min_{\RLB' \in \StartsWith(\PrefixB)} \Obj(\RLB', \x, \y). \nn
 \end{align}
 
+\clearpage
 \section{Proof of Theorem~\ref{thm:similar} (Similar support bound)}
 \label{appendix:similar-supp}
 
