--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -1,4 +1,3 @@
-\newpage
 \section{Data processing details and antecedent mining}
 \label{appendix:data}
 
@@ -49,6 +48,7 @@ the number of juvenile crimes that were neither felonies nor misdemeanors (not s
 \label{tab:recidivism-data}
 \end{table}
 
+\clearpage
 \textbf{NYCLU stop-and-frisk dataset.} The original dataset contains 45,787 records,
 each describing an incident involving a stopped person; the individual
 was frisked in 30,345 (66.3\%) of records and and searched in 7,283 (15.9\%).
@@ -77,7 +77,7 @@ as well as negations of the 18 antecedents corresponding to the two features
 \emph{stop reason} and \emph{additional circumstances},
 which gives a total of 46 antecedents.
 
-\begin{table}[t!]
+\begin{table}[h!]
 \centering
 %$Q_\text{max}$ $K_\text{max}$
 \begin{tabular}{l | c  c}
@@ -107,6 +107,7 @@ inside or outside & inside, outside & 2 \\
 \label{tab:frisk-data}
 \end{table}
 
+\clearpage
 \section{Example optimal rule lists, for different values of~$\Reg$}
 \label{appendix:examples}
 
@@ -264,6 +265,7 @@ across 10 cross-validation folds.
 \label{fig:recidivism-rule-list-005}
 \end{figure}
 
+\clearpage
 \textbf{NYCLU stop-and-frisk dataset.}
 We show example optimal rule lists that predict whether a weapon
 will be found on a stopped individual who is frisked or searched.
