Minor bib edits (author first names)

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1459,7 +1459,8 @@ year={1995}
 
 @article{Bertsimas16,
   title={Best subset selection via a modern optimization lens},
-  author={Bertsimas, Dimitris and King, Angela and Mazumder, Rahul},
+  __author={Bertsimas, Dimitris and King, Angela and Mazumder, Rahul},
+  author={Bertsimas, D. and King, A. and Mazumder, R.},
   journal={The Annals of Statistics},
   volume={44},
   number={2},
@@ -1495,7 +1496,8 @@ pages={19--28}
 }
 
 @inproceedings{Frank1998,
- author = {Frank, Eibe and Witten, Ian H.},
+ __author = {Frank, Eibe and Witten, Ian H.},
+ author = {Frank, E. and Witten, I. H.},
  title = {Generating Accurate Rule Sets Without Global Optimization},
  booktitle = {Proceedings of the Fifteenth International Conference on Machine Learning},
  series = {ICML '98},
@@ -1514,7 +1516,7 @@ pages={261--283}
 }
 
 @inproceedings{Michalski1969,
-author={R.S. Michalski},
+author={R. S. Michalski},
 year={1969},
 title={On the quasi-minimal solution of the general covering problem},
 booktitle={Proceedings of the Fifth International Symposium on Information Processing},
